# raft-backed-distributed-mapreduce-control-plane

./: CMakeLists.txt  Makefile  README.md  docs.md  requirement.txt
include/apollo/: cluster.h
proto/: apollo.proto
src/: cluster.cpp  main.cpp
tests/: apollo_tests.cpp
